--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 body {
   margin: 0;
-  padding: 0 300px 0 300px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: black !important; */
+  background-color: black !important;
 }
 
 code {
